# hurag-webui

./: .gitattributes  .gitignore  LICENSE  README.md  hurag_webui.service.1  hurag_webui_template.service  native_sso.csv  pyproject.toml  webui-config.yaml.sample  webui-config_template.yaml  webui.env.sample
src/hurag_webui/: __init__.py  backend.py  clients.py  constants.py  dbs.py  events.py  init.py  init_cli.py  kernel.py  main.py  prompts.py
src/hurag_webui/dss/: rss.py
src/hurag_webui/fts/: __init__.py  retriever.py  tokenizer.py
src/hurag_webui/models/: __init__.py  citation.py  session.py  user.py
src/hurag_webui/services/: __init__.py  citation_service.py  session_service.py  user_service.py
src/hurag_webui/static/: test_resp.md
src/hurag_webui/viewers/: __init__.py  chat_viewer.py  citation_viewer.py  session_viewer.py  user_viewer.py
