[project]
name = "hurag-webui"
version = "0.1.0"
description = "The WebApp for HuRAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "bm25s>=0.2.14",
    "fastapi>=0.123.0",
    "gunicorn>=23.0.0",
    "html-sanitizer>=2.6.0",
    "jieba>=0.42.1",
    "json-repair>=0.54.2",
    "latex2mathml>=3.78.1",
    "mdformat>=1.0.0",
    "nicegui>=3.3.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uuid6>=2025.0.1",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
]

